@@ -34,6 +34,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix regression in 21.08.1 that broke federated jobs.
  -- Correctly handle requested GRES when used in job arrays.
  -- Fix error in pmix logic dealing with the incorrect size of buffer.
+ -- Fix handling of no_consume GRES, add it to allocated job allocated TRES.
 
 * Changes in Slurm 21.08.2
 ==========================
